# mpRPCFrame

./: CMakeLists.txt  README.md  autobuild.sh
conf/: rpcConf.conf
example/: user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  calleeuserservice.cc
example/caller/: CMakeLists.txt  calleruserservice.cc
lib/include/: lockqueue.h  logger.h  mprpcchannel.h  zkutil.h
log/: 2024-3-3-log.txt  2024-3-6-log.txt  2025-2-8-log.txt  2025-2-9-log.txt
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconf.cc  mprpccontroller.cc  rpcheader.pb.cc  rpcheader.proto  rpcprovider.cc  zkutil.cc
src/include/: lockqueue.h  mprpcapplication.h  mprpcchannel.h  mprpcconf.h  mprpccontroller.h  rpcheader.pb.h  rpcprovider.h
test/protobuf/: a.out  main  main.cc  test.pb.cc  test.pb.h  test.proto
